Enhance harmony between multiple check buttons and select option buttons in AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/credential.html
+++ b/api-runtime/rest-runtime/admin-web/html/credential.html
@@ -178,7 +178,6 @@
     }
 
     function deleteSelectedCredentials() {
-        const providerFilter = document.getElementById("providerFilter").value;
         const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]:checked');
         const visibleCheckboxes = Array.from(checkboxes).filter(checkbox => checkbox.closest('table').style.display !== 'none');
 
@@ -221,7 +220,6 @@
     }
 
     function toggleSelectAll(source) {
-        const providerFilter = document.getElementById("providerFilter").value;
         const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]');
         checkboxes.forEach(checkbox => {
             if (checkbox.closest('table').style.display !== 'none') {
@@ -469,10 +467,23 @@
                 table.style.display = "none";
             }
         });
+
+        // Uncheck all checkboxes when the filter changes
+        uncheckAllCheckboxes();
+        // Uncheck the main delete checkbox
+        document.querySelector('.fixed-action-buttons input[type="checkbox"]').checked = false;
+    }
+
+    function uncheckAllCheckboxes() {
+        const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]');
+        for (const checkbox of checkboxes) {
+            checkbox.checked = false;
+        }
     }
 
     document.addEventListener('DOMContentLoaded', (event) => {
         setupDropZone();
+        document.getElementById("providerFilter").addEventListener('change', filterProvider);
     });
 </script>
 </head>
