--- a/api-runtime/rest-runtime/admin-web/html/connection.html
+++ b/api-runtime/rest-runtime/admin-web/html/connection.html
@@ -219,7 +219,9 @@
     function toggleSelectAll(source) {
         const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]');
         for (const checkbox of checkboxes) {
-            checkbox.checked = source.checked;
+            if (checkbox.closest('table').style.display !== 'none') {
+                checkbox.checked = source.checked;
+            }
         }
     }
 
@@ -227,7 +229,9 @@
         const table = document.getElementById(tableId);
         const checkboxes = table.querySelectorAll('input[name="deleteCheckbox"]');
         for (const checkbox of checkboxes) {
-            checkbox.checked = source.checked;
+            if (table.style.display !== 'none') {
+                checkbox.checked = source.checked;
+            }
         }
     }
 
@@ -476,6 +480,18 @@
                 table.style.display = "none";
             }
         });
+
+        // Uncheck all checkboxes when the filter changes
+        uncheckAllCheckboxes();
+        // Uncheck the main delete checkbox
+        document.querySelector('.fixed-action-buttons input[type="checkbox"]').checked = false;
+    }
+
+    function uncheckAllCheckboxes() {
+        const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]');
+        for (const checkbox of checkboxes) {
+            checkbox.checked = false;
+        }
     }
 </script>
 </head>
