--- a/api-runtime/rest-runtime/admin-web/html/driver.html
+++ b/api-runtime/rest-runtime/admin-web/html/driver.html
@@ -319,6 +319,18 @@
                 table.style.display = "none";
             }
         });
+
+        // Uncheck all checkboxes when the filter changes
+        uncheckAllCheckboxes();
+        // Uncheck the main delete checkbox
+        document.querySelector('.fixed-action-buttons input[type="checkbox"]').checked = false;
+    }
+
+    function uncheckAllCheckboxes() {
+        const checkboxes = document.querySelectorAll('input[name="deleteCheckbox"]');
+        for (const checkbox of checkboxes) {
+            checkbox.checked = false;
+        }
     }
 
     document.addEventListener('DOMContentLoaded', (event) => {
